data/derived/sp14/progs/unify/prog0559.ml.out
Characters 32-37:
  let _ = assoc ('c', 123, [(123, "sad"); (321, "happy")]);;
                                  ^^^^^
Error: This expression has type string but an expression was expected of type
         char
